fix(style): decrease tranlateX value for switch thumb in dark mode

--- a/src/ui/atoms/theme/themeSwitcher.scss
+++ b/src/ui/atoms/theme/themeSwitcher.scss
@@ -41,7 +41,7 @@
       will-change: transform;
 
       &[data-state='checked'] {
-        transform: translateX(33px);
+        transform: translateX(30px);
       }
     }
   }
